Fix z-index of legend and layers
Former-commit-id: 1f854b8f21cb43549a82492c1324e2069876022f [formerly 28cead13865b2120d021424cd206d43eb06d514e]
Former-commit-id: 86dfc0ea5d4d06bfc2c3b8c7758e80f938497108

--- a/root/css/el.css
+++ b/root/css/el.css
@@ -360,3 +360,7 @@ p.subhed {
     display: none;
   }
 }
+
+.leaflet-top, .leaflet-bottom {
+    z-index: 999;
+}
